# smba

./: README.md  manage.py  pyproject.toml
leds/: admin.py  api.py  apps.py  models.py  schema.py  views.py
leds/migrations/: 0001_initial.py  0002_preset_speed.py  0003_alter_preset_led_settings.py  0004_preset_preset_name.py  0005_alter_preset_led_settings.py  0006_alter_preset_active_alter_preset_mode.py  0007_remove_preset_led_settings_remove_preset_speed_and_more.py  0008_alter_preset_mode.py
leds/templates/leds/: index.html
smba/: asgi.py  settings.py  urls.py  wsgi.py
